update changelog and vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,9 @@
         "tab.activeBorder": "#457ca4",
         "statusBar.background": "#366180",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#457ca4"
+        "statusBarItem.hoverBackground": "#457ca4",
+        "statusBarItem.remoteBackground": "#366180",
+        "statusBarItem.remoteForeground": "#e7e7e7"
     },
     "peacock.color": "#366180",
     "mochaExplorer.files": "src/test/**/*test.ts",
