--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,8 @@
         "statusBar.foreground": "#e7e7e7",
         "statusBarItem.hoverBackground": "#457ca4",
         "statusBarItem.remoteBackground": "#366180",
-        "statusBarItem.remoteForeground": "#e7e7e7"
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "sash.hoverBorder": "#457ca4"
     },
     "peacock.color": "#366180",
     "mochaExplorer.files": "src/test/**/*test.ts",
