--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,12 +27,21 @@
         "statusBar.foreground": "#e7e7e7",
         "statusBarItem.hoverBackground": "#457ca4",
         "statusBarItem.remoteBackground": "#366180",
-        "statusBarItem.remoteForeground": "#e7e7e7"
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#366180",
     "mochaExplorer.files": "src/test/**/*test.ts",
     "mochaExplorer.logpanel": true,
     "mochaExplorer.require": "ts-node/register",
     "mochaExplorer.esmLoader": false,
-    "cSpell.words": ["Autocompleter", "USERPROFILE", "carlocardella", "filesystemtoolbox", "submenu", "submenus"]
+    "cSpell.words": [
+        "Autocompleter",
+        "USERPROFILE",
+        "carlocardella",
+        "filesystemtoolbox",
+        "submenu",
+        "submenus"
+    ],
+    "task.allowAutomaticTasks": "on"
 }
