update assets path

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "categories": [
     "Other"
   ],
-  "icon": "Assets/tech-service.png",
+  "icon": "assets/tech-service.png",
   "publisher": "carlocardella",
   "author": {
     "name": "Carlo Cardella",
