--- a/package.json
+++ b/package.json
@@ -93,13 +93,19 @@
       },
       {
         "command": "vscode-FileSystemToolbox.DuplicateFile",
-        "title": "Duplicate file",
+        "title": "Duplicate file...",
         "enablement": "editorIsOpen",
         "category": "File System Toolbox"
       },
       {
         "command": "vscode-FileSystemToolbox.DeleteFile",
-        "title": "Delete file",
+        "title": "Delete file...",
+        "enablement": "editorIsOpen",
+        "category": "File System Toolbox"
+      },
+      {
+        "command": "vscode-FileSystemToolbox.RenameFile",
+        "title": "Rename file...",
         "enablement": "editorIsOpen",
         "category": "File System Toolbox"
       },
@@ -117,7 +123,7 @@
       },
       {
         "command": "vscode-FileSystemToolbox.MoveFile",
-        "title": "Move File",
+        "title": "Move File...",
         "enablement": "editorIsOpen",
         "category": "File System Toolbox"
       },
@@ -274,23 +280,27 @@
       "fst.edit": [
         {
           "command": "vscode-FileSystemToolbox.NewFileRelativeToCurrentFile",
-          "group": "fst.edit"
+          "group": "fst.edit@1"
         },
         {
           "command": "vscode-FileSystemToolbox.NewFileRelativeToWorkspaceRoot",
-          "group": "fst.edit"
+          "group": "fst.edit@2"
         },
         {
           "command": "vscode-FileSystemToolbox.DuplicateFile",
-          "group": "fst.edit"
+          "group": "fst.edit@3"
         },
         {
-          "command": "vscode-FileSystemToolbox.DeleteFile",
-          "group": "fst.edit"
+          "command": "vscode-FileSystemToolbox.RenameFile",
+          "group": "fst.edit@4"
         },
         {
           "command": "vscode-FileSystemToolbox.MoveFile",
-          "group": "fst.edit"
+          "group": "fst.edit@5"
+        },
+        {
+          "command": "vscode-FileSystemToolbox.DeleteFile",
+          "group": "fst.edit@6"
         }
       ],
       "fst.transform": [
@@ -429,22 +439,22 @@
     "unit-tests": "tsc -w -p ./"
   },
   "devDependencies": {
-    "@types/glob": "^8.0.0",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "^18.11.3",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.11",
     "@types/vscode": "^1.45.0",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^7.32.0",
-    "glob": "^8.0.3",
+    "glob": "^10.2.1",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.21",
-    "ts-loader": "^9.4.1",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
+    "typescript": "^5.0.4",
     "vscode-test": "^1.6.1",
-    "webpack": "^5.74.0",
+    "webpack": "^5.79.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev": "^1.1.1"
   },
